ui_events: polishing after user comments
- switch reference/additional
- put labels on reference additional
- bigger text
- change "all users", with "bin"
- add db query language demo
- change label

--- a/static/css/bubbles.css
+++ b/static/css/bubbles.css
@@ -13,6 +13,7 @@
   -moz-border-radius:10px;
   border-radius:10px;
   text-align: center;
+  font-size: 200%;
 }
 
 .triangle-obtuse-other {
@@ -30,4 +31,5 @@
   -moz-border-radius:10px;
   border-radius:10px;
   text-align: center;
+  font-size: 200%;
 }
