mb.css: put all in mb-view and delete file

--- a/static/css/mb-view.css
+++ b/static/css/mb-view.css
@@ -1,3 +1,9 @@
+button.hidden {visibility:hidden;}
+
+* {
+    font-family: sans-serif;
+}
+
 div.zoomedPart {
     zoom: 0.65;
     -ms-zoom: 0.65;
